Completed Chapters 1 to 4, Conclusions mostly done - results pendin

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -116,7 +116,8 @@
 	author = {Alahi, Alexandre and Goel, Kratarth and Ramanathan, Vignesh and Robicquet, Alexandre and Fei-Fei, Li and Savarese, Silvio},
 	month = jun,
 	year = {2016},
-	pages = {961--971}
+	pages = {961--971},
+	file = {_chat.txt:/Users/anjalikarimpil/Downloads/_chat.txt:text/plain}
 }
 
 @inproceedings{goldhammer_pedestrians_2014,
@@ -637,4 +638,26 @@
 	url = {https://www.sublimetext.com/},
 	urldate = {2018-08-26},
 	file = {Sublime Text - A sophisticated text editor for code, markup and prose:/Users/anjalikarimpil/Zotero/storage/PMGKKTNQ/www.sublimetext.com.html:text/html}
+}
+
+@misc{noauthor_sklearn.preprocessing.minmaxscaler_nodate,
+	title = {sklearn.preprocessing.{MinMaxScaler} â scikit-learn 0.19.2 documentation},
+	url = {http://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html},
+	urldate = {2018-08-26},
+	file = {sklearn.preprocessing.MinMaxScaler â scikit-learn 0.19.2 documentation:/Users/anjalikarimpil/Zotero/storage/EVREILZP/sklearn.preprocessing.MinMaxScaler.html:text/html}
+}
+
+@article{manh_scene-lstm:_2018,
+	title = {Scene-{LSTM}: {A} {Model} for {Human} {Trajectory} {Prediction}},
+	shorttitle = {Scene-{LSTM}},
+	url = {http://arxiv.org/abs/1808.04018},
+	abstract = {We develop a human movement trajectory prediction system that incorporates the scene information (Scene-LSTM) as well as human movement trajectories (Pedestrian movement LSTM) in the prediction process within static crowded scenes. We superimpose a two-level grid structure (scene is divided into grid cells each modeled by a scene-LSTM, which are further divided into smaller sub-grids for finer spatial granularity) and explore common human trajectories occurring in the grid cell (e.g., making a right or left turn onto sidewalks coming out of an alley; or standing still at bus/train stops). Two coupled LSTM networks, Pedestrian movement LSTMs (one per target) and the corresponding Scene-LSTMs (one per grid-cell) are trained simultaneously to predict the next movements. We show that such common path information greatly influences prediction of future movement. We further design a scene data filter that holds important non-linear movement information. The scene data filter allows us to select the relevant parts of the information from the grid cell's memory relative to a target's state. We evaluate and compare two versions of our method with the Linear and several existing LSTM-based methods on five crowded video sequences from the UCY [1] and ETH [2] datasets. The results show that our method reduces the location displacement errors compared to related methods and specifically about 80\% reduction compared to social interaction methods.},
+	urldate = {2018-08-27},
+	journal = {arXiv:1808.04018 [cs]},
+	author = {Manh, Huynh and Alaghband, Gita},
+	month = aug,
+	year = {2018},
+	note = {arXiv: 1808.04018},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition},
+	file = {arXiv\:1808.04018 PDF:/Users/anjalikarimpil/Zotero/storage/MQK99D3N/Manh and Alaghband - 2018 - Scene-LSTM A Model for Human Trajectory Predictio.pdf:application/pdf;arXiv.org Snapshot:/Users/anjalikarimpil/Zotero/storage/EBKFPLFL/1808.html:text/html}
 }
