--- a/Thesis.tex
+++ b/Thesis.tex
@@ -9,8 +9,9 @@
 % Include any extra LaTeX packages required
 \usepackage[square, numbers, comma, sort&compress,]{natbib}  % Use the "Natbib" style for the references in the Bibliography
 \usepackage{verbatim}  % Needed for the "comment" environment to make LaTeX comments
+\usepackage[export]{adjustbox}
 \usepackage{vector}  % Allows "\bvec{}" and "\buvec{}" for "blackboard" style bold vectors in maths
-\usepackage{caption}
+% \usepackage{caption}
 \usepackage{array}
 \captionsetup[figure]{font=footnotesize}
 \hypersetup{urlcolor=blue, colorlinks=true}  % Colours hyperlinks in blue, but this can be distracting if there are many links.
@@ -98,7 +99,7 @@ Date:\\
 \abstract{
 \addtocontents{toc}{\vspace{1em}}  % Add a gap in the Contents, for aesthetics
 
-The Thesis Abstract is written here (and usually kept to just this page). The page is kept centered vertically so can expand into the blank space above the title too\ldots
+Pedestrian trajectory estimation is an actively researched problem in the field of Computer Vision and Time-series forecasting. In this work, a Recurrent Neural Network with a relatively less frequently used architecture, called Gated Recurrent Units are employed to predict pedestrian trajectory from x, y co-ordinates of the previous.  
 
 }
 
