Completed Chapters 1 to 4, Conclusions mostly done - results pending

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -99,7 +99,7 @@ Date:\\
 \abstract{
 \addtocontents{toc}{\vspace{1em}}  % Add a gap in the Contents, for aesthetics
 
-Pedestrian trajectory estimation is an actively researched problem in the field of Computer Vision and Time-series forecasting. In this work, a Recurrent Neural Network with a relatively less frequently used architecture, called Gated Recurrent Units are employed to predict pedestrian trajectory from x, y co-ordinates of the previous.  
+Pedestrian trajectory estimation is an actively researched problem in the field of Computer Vision and Time-series forecasting. In this work, a Recurrent Neural Network with a relatively less frequently used architecture, called Gated Recurrent Units are employed to predict pedestrian trajectory from x, y co-ordinates of the previous.  Edit this
 
 }
 
